# orange-canvas-core

./: .appveyor.yml  .gitignore  .readthedocs.yml  .travis.yml  MANIFEST.in  README.rst  README.txt  appveyor.yml  mypy.ini  pyproject.toml  setup.cfg  setup.py
.github/workflows/: release.yml  run-docs-build.yml  run-tests-workflow.yml  test-translations.yml
OrangeCanvas/: config.py  main.py  resources.py
OrangeCanvas/application/: addons.py  canvasmain.py  outputview.py  schemeinfo.py  settings.py  widgettoolbox.py
OrangeCanvas/canvas/: scene.py
OrangeCanvas/document/: schemeedit.py
OrangeCanvas/gui/: tooltree.py
OrangeCanvas/help/: manager.py  provider.py
OrangeCanvas/preview/: previewbrowser.py  scanner.py
OrangeCanvas/registry/: base.py  description.py  discovery.py
OrangeCanvas/scheme/: annotations.py  events.py  readwrite.py  scheme.py  signalmanager.py  widgetsscheme.py
OrangeCanvas/styles/: orange.qss
OrangeCanvas/utils/: qtcompat.py
docs/: Makefile  index.rst  make.bat  requirements-rtd.txt
docs/source/: conf.py  index.rst
i18n/: trans.sh  trubar-config.yaml
i18n/de/: msgs.jaml
i18n/si/: msgs.jaml
orangecanvas/: __main__.py  config.py  main.py  resources.py
orangecanvas/application/: aboutdialog.py  addons.py  application.py  canvasmain.py  canvastooldock.py  examples.py  outputview.py  schemeinfo.py  settings.py  welcomedialog.py  widgettoolbox.py
orangecanvas/canvas/: layout.py  scene.py  utils.py  view.py
orangecanvas/document/: commands.py  editlinksdialog.py  interactions.py  quickmenu.py  schemeedit.py  suggestions.py  usagestatistics.py  utils.py  windowgroupsdialog.py
orangecanvas/gui/: breadcrumbs.py  dock.py  dropshadow.py  framelesswindow.py  iconengine.py  iconview.py  itemmodels.py  lineedit.py  palette_utils.py  quickhelp.py  (+12 more)
(+189 files in other folders)
