[metadata]

name             = orange-canvas-core
version          = 0.3.0a1.dev0
description      = Core component of Orange Canvas
long_description = file: README.rst
keywords         =
home_page        = http://orange.biolab.si/
author           = Bioinformatics Laboratory, FRI UL <contact@orange.biolab.si>

project_urls =
    Home Page     = https://github.com/biolab/orange-canvas-core
    Source        = https://github.com/biolab/orange-canvas-core
    Issue Tracker = https://github.com/biolab/orange-canvas-core/issues
    Documentation = https://orange-canvas-core.readthedocs.io/en/latest/

license = GPLv3
license_file = LICENSE.txt

classifiers =
    Development Status :: 1 - Planning
    Environment :: X11 Applications :: Qt
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Software Development :: Libraries :: Python Modules
    Intended Audience :: Education
    Intended Audience :: Developers

[options]

packages = find:

install_requires =
    AnyQt >= 0.2.0
    docutils
    commonmark >= 0.8.1
    requests
    requests-cache
    pip >= 23.3
    dictdiffer
    qasync >= 0.13.0
    typing_extensions
    packaging
    numpy

setup_requires=
    setuptools >=30.0

python_requires = >=3.10

[options.extras_require]
DOCBUILD = sphinx; sphinx-rtd-theme;


[coverage:run]
source =
    orangecanvas

omit =
    */tests/*.py

[coverage:report]
exclude_lines =
    noqa
    pragma: no coverage
    raise NotImplementedError
    if __name__ == .__main__.:
    if typing.TYPE_CHECKING:
    if TYPE_CHECKING:
    assert False
